--- a/src/app/add-montre/add-montre.component.html
+++ b/src/app/add-montre/add-montre.component.html
@@ -28,6 +28,16 @@
     </select>
 </div> 
 
+<div class="col-sm-16 col-md-16 col-lg-16">
+    <label class="mb-2">Image :</label>
+    <input type="file" (change)="onImageUpload($event)"
+    name="logo" class="form-control">
+    </div>
+    <div class="col-sm-16 col-md-16 col-lg-16">
+        <img [src]="imagePath" class="card-img-top img-fluid rounded-start"
+        style="width: 500px; height: 300px" />
+        </div>
+
         <div class="mt-2">
             <button type="submit" (click)="addMontre()" class="btn btn-success">Ajouter</button>
             <div>
