--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,43 +1,58 @@
+<!DOCTYPE html>
+<html >
+<head>
+<meta charset="utf-8">
+<title>Gestion des Montres</title>
+</head>
+<body>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <!-- Brand -->
-    <a class="navbar-brand" href="#">Gestion Montres</a>
-    <!-- Links -->
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link" routerLink="/montres">Home</a>
-        </li>
-        <!-- Dropdown -->
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                Montres
-            </a>
-            <div class="dropdown-menu">
-                <a   *ngIf="authService.isAdmin()" class="dropdown-item" routerLink="/add-montre">Ajouter</a>
-                <a class="dropdown-item" href="#">Lister</a>
-                <a class="dropdown-item"  routerLink="/rechercheParGenre" >Recherche Par Genre</a> 
-                <a class="dropdown-item"  routerLink="/rechercheParNom" >Recherche Par Nom</a> 
-                <a class="dropdown-item" routerLink="/listeGenres" >Gestion des genres</a> 
+<!-- Brand -->
+<a class="navbar-brand" href="#">Gestion Montres</a>
+<!-- Links -->
+<ul class="navbar-nav">
+<li class="nav-item">
+<a class="nav-link" routerLink="/Montres">Home</a>
+</li>
+<!-- Dropdown -->
+<li class="nav-item dropdown">
+<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+    Montres
+</a>
+<div class="dropdown-menu">
+<a *ngIf="authService.isAdmin()" class="dropdown-item"
+ class="dropdown-item" routerLink="/add-Montres">Ajouter</a>
+<a class="dropdown-item" href="#">Lister</a>
+<a class="dropdown-item" routerLink="/rechercheParGenre" >Recherche Par Gnere</a>
+<a class="dropdown-item" routerLink="/rechercheParNom" >Recherche Par Nom</a>
+<a *ngIf="authService.isAdmin()" class="dropdown-item"
+class="dropdown-item" routerLink="/listeGenres" >Gestion des genres</a>
 
 
-            </div>
-        </li>
-    </ul>
-    <ul class="navbar-nav ml-auto">
-        <li> <a  class="nav-link">{{authService.loggedUser}}</a></li> 
+</div>
+</li>
+</ul>
+<ul class="navbar-nav ml-auto" >
+  <li> <a class="nav-link"></a></li>
+<li class="nav-item dropdown">
+<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+{{authService.loggedUser ? authService.loggedUser : "connexion"}}
+</a>
+<div class="dropdown-menu">
+  <a *ngIf="!authService.isloggedIn" class="dropdown-item" routerLink = "login">login</a>
+  <a *ngIf="authService.isloggedIn" class="dropdown-item" (click) = "onLogout()">logout</a>
+<a class="dropdown-item" href="#">Profile</a>
 
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                [username]
-            </a>
-            <div class="dropdown-menu">
-                <a *ngIf="!authService.isloggedIn"  class="dropdown-item" routerLink = "login">login</a>
-                <a *ngIf="authService.isloggedIn" class="dropdown-item" (click) = "onLogout()">logout</a>
-                <a class="dropdown-item" href="#">Profile</a>
-            </div>
-        </li>
-    </ul>
+</div>
+</li>
+</ul>
 </nav>
+</body>
+</html>
 <router-outlet></router-outlet>
+
+
+
+
 
 
 
