--- a/src/app/update-montre/update-montre.component.html
+++ b/src/app/update-montre/update-montre.component.html
@@ -40,6 +40,40 @@
                           </option> 
                           </select>                      
                           </div>  
+
+                          <div class="card shadow mb-4">
+                            <div class="card-body">
+                            <table class="table table-striped">
+                            <thead>
+                            <tr> <th>Images</th> </tr>
+                            </thead>
+                            <tbody *ngFor="let img of currentMontre.images">
+                              <tr>
+                              <td><img class="card-img-top img-responsive"
+                              src = "{{'data:' + img.type + ';base64,' + img.image}}"
+                              style = "height :50px;width:100px"></td>
+                              <td style="width:20%" ><a class="btn btn-danger"
+                                (click)="supprimerImage(img)">Supprimer</a></td>
+                              </tr>
+                              </tbody>
+                              </table>
+                              </div>
+                              </div>
+
+                              <div class="col-sm-16 col-md-16 col-lg-16">
+                                <img [src]="myImage" class="card-img-top img-fluid rounded-start"
+                                style="width: 500px; height: 300px" />
+                                </div>
+                                <div class="col-sm-16 col-md-16 col-lg-16">
+                                  <label class="mb-2">Image :</label>
+                                  <input type="file" (change)="onImageUpload($event)" class="form-control">
+                                  </div>
+                                  <div class="mt-2">
+                                    <button type="submit" (click)="onAddImageMontre()" class="btn
+                                    btn-success">Ajouter Image</button>
+                                    </div>
+
+
                           
                           <div class="mt-2"> 
            <button type="submit"  (click)="updateMontre()" class="btn btn-success">Modifer</button> 
